# uiap

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
uiap/: main.py
uiap/config/: config.py
uiap/core/: crypto.py  serial_file_transfer.py
uiap/core/crypto/: crypto.py
uiap/core/protocol/: serial_file_transfer.py
uiap/gui/: Ui_uiap.py  gui_uiap.py  resource_rc.py  serial_rx_tx_item.py  serial_thread.py
uiap/gui/serial_handlers/: serial_handler.py  serial_handler_io.py  serial_handler_ymodem.py
uiap/ui/: resource.qrc  uiap.ui
uiap/utils/: log.py
